--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <ul>
+    <!--ul>
       <li><a href="01-gallery.html">Image gallery</a></li>
       <li><a href="02-lightbox.html">SimpleLightbox library</a></li>
-    </ul>
+    </ul-->
+    <script src="./js/test05.js"></script>
   </body>
 </html>
